# school-interview-system

./: .env  .gitignore  README-ja.md  README.md  package-lock.json  package.json  vue.config.js
backend/: .env  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  launch-server-docker.sh  launch-server-local.sh  launch-server.sh  poetry.toml  pyproject.toml
backend/api/: main.py
backend/certificate/: generate.sh
backend/migrations/: README  env.py
backend/migrations/versions/: 1d7536de2605_grade_semesterに変更.py  211865b687a2_create_tables.py  2516caaaf219_interviewanalyticsデータモデルを追加.py  2bae78884435_create_tables.py  5e8093960c72_student_and_admin.py  63179968c91e_id.py  6871aef4c6ce_teachersにimage_urlフィールドを追加.py  6dcb9bda78ba_interviewsessionとinterviewquestionのリレーショ_.py  78857c0fbaeb_interview_analyticsにstart_atとend_.py  7acd500ea25f_interviewgroupのorderカラムの設定忘れに対応え.py  89ee459fb075_declare_models.py  9164bc7d20d8_interviewquestionmodelにgroupを追加.py  94f9485a9cc2_adminのuseridのリレーション忘れてたので修正.py  98d8f4765cd0_userの削除に合わせて他のテーブルの行も削除されるようにしました_.py  a165a7b9668d_interviewanalyticsにプロパティを追加.py  a2295f7fb79b_interviewsessionのstart_.py  ad28d76f3574_interviewgroupとinterviewquestionの半構造形式対応.py  af7ddd3f00c5_interviewquestionmodel_.py  b3aa903710c4_interviewrecordのモデルをアップデート.py  b57c76fac34d_set_nullable_to_some_properties_in_.py  cfa10eb82f36_interviewquestionのcondition_value_.py  d356317ce177_connectionからwebsocketconnectionへ変更.py  dc1d3dd0d750_grade_semesterに変更.py  e134f97cf0c7_adviseカラムの追加_interviewanalytics.py  efb2eff20cce_interviewquestionにpromptプロパティを追加.py  f98708bce6da_initial_migration.py
backend/nginx/: nginx.conf
backend/pdf/markdown_output/: campusguide copy.md  campusguide-conversation.md
backend/src/: launch-server-docker.ps1  main.py  socket_io.py
backend/src/controllers/: __init__.py
backend/src/crud/: __init__.py  admin_crud.py  base_crud.py  interview_analytics_crud.py  interview_groups_crud.py  interview_questions_crud.py  interview_record_crud.py  interview_sessions_crud.py  students_crud.py  teachers_crud.py  user_crud.py  users_crud.py
backend/src/database/: __init__.py  seedings.py
backend/src/middlewares/: reverse_proxy_middleware.py
backend/src/models/: __init__.py  app_data_models.py  app_pydantic_base_model.py  auth_token_model.py  connection_model.py  errors_model.py  interview_question_model.py  interview_record_model.py  interview_session_model.py  llm_structured_output_models.py  rest_api_controller_model.py  rest_api_model.py  teacher_model.py  user.py  user_model.py  websocket_controller_model.py
backend/src/usecases/: __init__.py
backend/test/: Dockerfile  test_analytics.py
backend/test/crud_tests/: seeding_fixtures.py  seedings.py  test_interview_session_crud.py  test_users_crud.py
backend/test/model_tests/: seeding_fixtures.py  test_analytics.py  (+2 more)
backend/tools/: README.md  delete_user.py  pdf-to-markdonw.py  switch_role.py  ws-client.py
backend/web/: flutter_bootstrap.js  flutter_service_worker.js  index.html
llm-service/: README.md  campus_guide.md  pyproject.toml
llm-service/src/: constant.py  main.py
(+310 files in other folders)
