[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dan Fujisaki <fujidan8464@gmail.com>","Yuma Tsuri <yuma33t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
python-socketio = "^5.11.3"
aiohttp = "^3.10.5"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
