[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dan Fujisaki <fujidan8464@gmail.com>","Yuma Tsuri <yuma33t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
python-socketio = "^5.11.3"
aiohttp = "^3.10.5"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
langchain = "^0.2.15"
langchain-community = "^0.2.15"
langchainhub = "^0.1.21"
langchain-openai = "^0.1.23"
langchain-chroma = "^0.1.3"
langchain-huggingface = "^0.0.3"
llama-cpp-python = "^0.2.90"
bs4 = "^0.0.2"
pymupdf4llm = "^0.0.14"
sqlalchemy-utils = "^0.41.2"
pytest = "^8.3.3"
google-auth = "^2.35.0"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
